Add number of players to game model

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :number_of_players %><br>
+    <%= f.text_field :number_of_players %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
