--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@player) do |f| %>
+<%= form_for([@game, @player]) do |f| %>
   <% if @player.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@player.errors.count, "error") %> prohibited this player from being saved:</h2>
@@ -14,10 +14,6 @@
   <div class="field">
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :game_id %><br>
-    <%= f.text_field :game_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
