--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @player %> |
-<%= link_to 'Back', players_path %>
+<%= link_to 'Show', game_player_path(@game, @player) %> |
+<%= link_to 'Back', game_players_path(@game) %>
