--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -9,5 +9,5 @@
   <%= @player.game %>
 </p>
 
-<%= link_to 'Edit', edit_player_path(@player) %> |
-<%= link_to 'Back', players_path %>
+<%= link_to 'Edit', edit_game_player_path(@game, @player) %> |
+<%= link_to 'Back', game_players_path(@game) %>
