--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -5,8 +5,8 @@
   <%= @player.user %>
 </p>
 <p>
-  <strong>Game:</strong>
-  <%= @player.game %>
+  <strong>Piece:</strong>
+  <%= @player.piece %>
 </p>
 
 <%= link_to 'Edit', edit_game_player_path(@game, @player) %> |
