--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.label :piece %><br>
+    <%= f.select :piece, Player.pieces.keys %>
   </div>
   <div class="actions">
     <%= f.submit %>
