Add switch user select to every page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<%= form_tag(nil, method: :get) do %>
+  <%= select_tag(:user, options_from_collection_for_select(User.all, :username, :username, (@current_user.username if @current_user))) %>
+  <%= submit_tag 'Change User' %>
+<% end %>
 <%= yield %>
 
 </body>
