--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -10,3 +10,5 @@
 
 <%= link_to 'New Game', new_game_path %>
 <%= link_to 'List Games', games_path %>
+<%= link_to 'New User', new_user_path %>
+<%= link_to 'List Users', users_path %>
