Make balance test green

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,6 +14,7 @@
 <% end %>
 
 <p id="players_in_game"><%= t('There are '"#{pluralize(@game.players.count, 'player')}"' in the game') %></p>
+<p id="balance"><%= t('Your balance is $'"#{current_game_player.balance}") %></p>
 <%= link_to 'Players', game_players_path(@game) %> |
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
