--- a/app/views/dice_rolls/_form.html.erb
+++ b/app/views/dice_rolls/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@game, current_game_player, current_game_player.dice_rolls.build]) do |f| %>
+<%= form_for([@game, @game.dice_rolls.build]) do |f| %>
   <%# with service model, this will be @errors, assigned in controller %>
   <% if @errors and @errors.any? %>
     <div id="error_explanation">
