Move dicerolls to events namespace

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,7 +20,7 @@
 
 <%= last_dice_roll_p %>
 
-<%= render 'dice_rolls/form' %>
+<%= render 'events/dice_rolls/form' %>
 
 <%= link_to 'Players', game_players_path(@game) %> |
 <%= link_to 'Edit', edit_game_path(@game) %> |
