Fix up dice rolling event

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -23,7 +23,7 @@
 
 <%= last_dice_roll_p %>
 
-<%= render 'events/dice_rolls/form' %>
+<%= roll_dice_form %>
 
 <%= link_to 'Players', game_players_path(@game) %> |
 <%= link_to 'Edit', edit_game_path(@game) %> |
