--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -15,9 +15,9 @@
   </thead>
 
   <tbody>
-    <% @game_state.players.each do |user, player| %>
+    <% @game_state.players.each do |player| %>
       <tr>
-        <td><%= User.find_by_id(user).username %></td>
+        <td><%= User.find_by_id(player[:user]).username %></td>
         <td><%= player[:piece] %></td>
       </tr>
     <% end %>
