Lots of work on movement and jail

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -23,7 +23,7 @@
   <p id="piece"><%= t('Your piece is '"#{current_game_player[:piece]}") %></p>
   <p id="balance"><%= t('Your balance is $'"#{current_game_player[:money]}") %></p>
   <p id="current_location"><%= t('You are at '"#{@game_state.board[current_game_player[:location]]}") %></p>
-  <% if current_game_player[:jail] %>
+  <% if current_game_player[:in_jail] %>
     <p id="in_jail"><%= t('You are in jail') %></p>
   <% end %>
 <% end %>
