Add end turn logic to features
All steps (except getting sent to jail and breaking out etc) should not
end turn automatically. So require the end turn button to be clicked
before swapping players.

Fixes up all the features to do this, adds a couple more to catch some
edge cases, and adds more steps. And of course adds in the code to do
it.

Uses a notion of "expecting" rolls, and defaults to expecting 2 on turn
change, and adds 2 on a double roll, and subtracts 1 on a single roll.
Will need to expand when utility rent comes in

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -26,14 +26,17 @@
   <% if current_game_player[:in_jail] %>
     <p id="in_jail"><%= t('You are in jail') %></p>
   <% end %>
-  <% if @game_state.can_buy_property? %>
-    <%= buy_property_form %>
-    <%= end_turn_form %>
-  <% end %>
   <% if @game_state.players[@game_state.current_player] == current_game_player %>
-    <div id="dice_roll">
-      <%= roll_dice_form %>
-    </div>
+    <% if @game_state.can_buy_property? %>
+      <%= buy_property_form %>
+    <% end %>
+    <% if @game_state.expecting_rolls > 0 %>
+      <div id="dice_roll">
+        <%= roll_dice_form %>
+      </div>
+    <% else %>
+      <%= end_turn_form %>
+    <% end %>
     <% if testing_mode? %>
       <div id="set_balance">
         <%= set_balance_form %>
